# web_homework_1

./: README.md  index.html  main.py  pyproject.toml
